--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,3 +22,13 @@ html {
     padding: 0 20px 20px 20px;
     border: 5px solid black;
   }
+  h1 {
+    margin: 0;
+    padding: 20px 0;    
+    color: rgb(82, 34, 28);
+    text-shadow: 3px 3px 1px black;
+  }
+  img {
+    display: block;
+    margin: 0 auto;
+  }
